--- a/rproxy/nginx/rproxy.conf
+++ b/rproxy/nginx/rproxy.conf
@@ -1,3 +1,6 @@
+proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=zone1:4m inactive=7d max_size=50m;
+proxy_temp_path  /var/cache/nginx_tmp;
+
 upstream web {
     least_conn;
     server web_app:80 weight=5 max_fails=3 fail_timeout=30s;
@@ -11,5 +14,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $http_host;
         proxy_pass http://web/;
+
+        proxy_ignore_headers Cache-Control;
+        proxy_cache zone1;
+        proxy_cache_key $uri;
+        proxy_cache_valid 200 302 1m;
+        proxy_cache_valid 404 10m;
     }
 }
