--- a/rproxy/nginx/rproxy.conf
+++ b/rproxy/nginx/rproxy.conf
@@ -3,7 +3,7 @@ proxy_temp_path  /var/cache/nginx_tmp;
 
 upstream web {
     least_conn;
-    server web_app:80 weight=5 max_fails=3 fail_timeout=30s;
+    server web_app:80 weight=5 max_fails=3 fail_timeout=10s;
 }
 
 server {
@@ -17,8 +17,13 @@ server {
 
         proxy_ignore_headers Cache-Control;
         proxy_cache zone1;
-        proxy_cache_key $uri;
-        proxy_cache_valid 200 302 1m;
-        proxy_cache_valid 404 10m;
+        #proxy_cache_key $uri;
+        proxy_cache_key $scheme$proxy_host$uri$is_args$args;
+        proxy_cache_valid 200 302 10m;
+        proxy_cache_valid 404 5m;
+
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504 http_403 http_404 http_429;
+        proxy_next_upstream error timeout;
+        proxy_next_upstream_tries 2;
     }
 }
